--- a/名侦探柯南.css
+++ b/名侦探柯南.css
@@ -8,11 +8,22 @@ body {
   h1 {
     border-bottom:1px solid gray;
   }
-  
+  a {
+    margin: 0;
+    padding: 0;
+   }
   p {
+    align-content: 2em;
     font-family: sans-serif;
     color: black;
     line-height: 50px;
+  }
+  p {
+    max-height: 100%
+  }
+  p {
+    word-wrap: break-word;
+    word-break: break-all;
   }
   .divcss5-a p {
     margin: 0 auto
