--- a/名侦探柯南.css
+++ b/名侦探柯南.css
@@ -11,8 +11,8 @@ body {
   }
 
   a {
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10;
    }
   p {
     align-content: 2em;
@@ -21,7 +21,7 @@ body {
     line-height: 50px;
   }
   p {
-    max-height: 100%
+    max-height: 125%;
   }
   p {
     word-wrap: break-word;
