--- a/名侦探柯南.css
+++ b/名侦探柯南.css
@@ -32,3 +32,15 @@ body {
   em {
     font-family: serif;
   }
+  .elixirs {
+    border-width: thin;
+    border-style: dotted;
+    border-color: #e9ebeb;
+    width: 1300px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    margin-left: 20px;
+    text-align: center;
+    line-height: normal;
+  }
